2017-12-30  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_functions.js:
	Add opts.detailKeys parameter to updateDetailsTable function.

2017-12-29  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_functions.js:
	Modify getItemDetail function.
	Define createHeaderRow function.
	Add opts.createRow parameter to appendDetailRows function.
	Add opts.keys parameter to createDetailRow function.
	Add opts.detailKeys parameter to appendDetailRows function.
	Rename keys parameter of createHeaderRow function to values parameter.
	Add opts.headerValues parameter to updateDetailsTable function.

2017-12-28  larissa9839  <larissa9839@gmail.com>

	* tryXpath/pages/options.html (Style to be inserted):
	Add some h1 elements.

	* tryXpath/background/try_xpath_background.js:
	Load body styles when the add-on is loaded.

	* tryXpath/pages/options.js:
	Set body styles to the storage.sync.

	* tryXpath/background/try_xpath_background.js:
	Handle storage change event and modify popupCss.

2017-12-26  larissa9839  <larissa9839@gmail.com>

	* tryXpath/pages/options.js:
	Define extractStyleValues function.
	Define defaultBodyStyles constants.
	Define isValidStyleLength function.
	Define createPopupCss function.

	* tryXpath/pages/options.html:
	Fix the div closing tag.
	Add input fields.

2017-12-25  larissa9839  <larissa9839@gmail.com>

	* tryXpath/background/try_xpath_background.js:
	Define genericListener.listeners.requestInsertStyleToPopup function.

	* tryXpath/popup/popup.js:
	Define genericListener.listeners.insertStyleToPopup function.

	* tryXpath/background/try_xpath_background.js:
	Define popupCss variable.

	* tryXpath/popup/popup.css:
	Modify some styles.

	* tryXpath/manifest.json:
	Change version. 1.2.0 -> 1.3.0b1

	* test/unit_test/jasmine/spec/spec.js:
	Get textContent as value if type is Element.

2017-11-29  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_content.js:
	Define invalidExecutionId constants.